--- a/style.css
+++ b/style.css
@@ -61,6 +61,61 @@ nav ul li a:hover {
     border-radius: 5px;
     padding: 10px;
 }
+#inicio_Sesion{
+    margin-top: -5px;
+    padding: 10px 15px;
+    color: white;
+    font-weight: bold;
+    font-size: 1rem;
+    transition: background 0.3s ease;
+}
+
+
+/* Ventana de Inicio de Sesion  */
+.ventana {
+    display: none; 
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    background-color: rgba(255, 115, 0, 0.4)
+}
+
+.ventana_contenido {
+    background-color: white;
+    margin: 8.5%;
+    padding: 20px;
+    border: 1px solid #888;
+    border-radius: 20px;
+    width: 80%; 
+    color: #ff6700;
+}
+
+.ventana_contenido h2{
+    color: #005f99;
+}
+
+#formLogin input{
+    width: 98%;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 
 /*Banner*/
 
